0026628: Button Erase (Delete where erase algorythm is used) works incorrect

Update AIS_InteractiveContext::EraseSelected() method.

Fix HLR sample

Fix samples.